# png-n-code

./: .clangd  .gitignore  CMakeLists.txt  Makefile  help.txt
.cache/clangd/index/: PNGdCoder.c.AAE510E5AA0FFB68.idx  PNGdCoder.h.A8C56EAF3A102415.idx  lodepng.c.17124A6E94671981.idx  lodepng.h.13F5493283177CA0.idx  main.c.7706EBD7B9D37C18.idx
include/: PNGdCoder.h
src/: PNGEncoder.c  PNGEncoder.h  PNGdCoder.c  PNGdCoder.h  main.c
